kubernetes/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: evept
  namespace: evept-dev
spec:
  rules:
  - host: api.evept-dev.err.wtf
    http:
      paths:
      - path: /rolodex
        backend:
          serviceName: rolodex
          servicePort: 8500
